force-app/main/default/objects/CP_Profile_Update__c/CP_Profile_Update__c.object-meta.xml
<CustomObject>
    <label>CP Profile Update</label>
    <nameField>
        <displayFormat>CPU-{0000}</displayFormat>
        <label>CP Profile Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP Profile Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>