force-app/main/default/objects/CP_Profile_Update__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CP Profile Updates</relationshipLabel>
    <relationshipName>CP_Profile_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>