force-app/main/default/objects/CP_Profile_Update__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Broker__c</referenceTo>
    <relationshipLabel>CP Profile Updates</relationshipLabel>
    <relationshipName>CP_Profile_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>