force-app/main/default/objects/CP_Profile_Update__c/fields/New_First_Name__c.field-meta.xml
<CustomField>
    <fullName>New_First_Name__c</fullName>
    <label>New First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>