force-app/main/default/objects/CP_Profile_Update__c/fields/New_GST_No__c.field-meta.xml
<CustomField>
    <fullName>New_GST_No__c</fullName>
    <label>New GST No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>