force-app/main/default/objects/CP_Profile_Update__c/fields/Old_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Last_Name__c</fullName>
    <label>Old Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>