force-app/main/default/objects/CP_Profile_Update__c/fields/Old_RERA_No__c.field-meta.xml
<CustomField>
    <fullName>Old_RERA_No__c</fullName>
    <label>Old RERA No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>